<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtFecha"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:paddingTop="22dp"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:text="@string/jueves_24_de_febrero_2022_8_30"
            android:textColor="@color/secondary" />


        <ImageView
            android:id="@+id/iwPrimary"
            android:layout_width="244dp"
            android:layout_height="148dp"
            android:layout_marginTop="20dp"
            android:layout_alignEnd="@+id/txtFecha"
            android:paddingTop="23dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/iconprimary" />

        <TextView
            android:id="@+id/textView0"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_below="@+id/iwPrimary"
            android:layout_alignStart="@+id/iwPrimary"
            android:layout_alignEnd="@+id/iwPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/bienvenido_al_sistema_de_pago_m_vil"
            android:textColor="@color/secondary" />

        <GridLayout
            android:id="@+id/glForm01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView0"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="48dp"
            android:columnCount="2"
            android:rowCount="4"
            android:visibility="visible">


            <TextView
                android:id="@+id/tvTxtDocument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/cedula" />

            <EditText
                android:id="@+id/etTypeDocument"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:hint="@string/type"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etDocument"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/document"
                android:inputType="number"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvTxtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:paddingTop="33dp"
                android:layout_column="0"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:autofillHints=""
                android:hint="@string/textdocument"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                tools:ignore="TextFields" />


        </GridLayout>


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView0"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:layout_marginStart="20dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="48dp"
            android:columnCount="2"
            android:rowCount="4">

            <TextView
                android:id="@+id/tvTxtBanck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/selecionar_banco" />

            <EditText
                android:id="@+id/etBankSelect"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:hint="@string/nombre_del_banco"
                android:inputType="text"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvTxtMonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="33dp"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/textMonto" />

            <EditText
                android:id="@+id/etMonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:hint="@string/monto"
                android:inputType="number"
                android:importantForAutofill="no" />

        </GridLayout>


    </RelativeLayout>
</layout>