<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main content -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="245dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="22dp"
                android:text="@string/jueves_24_de_febrero_2022_8_30"
                android:textColor="@color/secondary" />


            <ImageView
                android:id="@+id/iwPrimary"
                android:layout_width="244dp"
                android:layout_height="148dp"
                android:layout_alignEnd="@+id/txtFecha"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="23dp"
                app:srcCompat="@drawable/iconprimary" />

            <TextView
                android:id="@+id/textView0"
                android:layout_width="245dp"
                android:layout_height="40dp"
                android:layout_below="@+id/iwPrimary"
                android:layout_alignStart="@+id/iwPrimary"
                android:layout_alignEnd="@+id/iwPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:gravity="center"
                android:text="@string/bienvenido_al_sistema_de_pago_m_vil"
                android:textColor="@color/secondary" />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView0"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="48dp"
                android:columnCount="2"
                android:rowCount="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/primary"
                            android:gravity="center"
                            android:orientation="vertical">

                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="6dp"
                                android:paddingBottom="6dp"
                                android:text="@string/Consolidadrio_Diario"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/distribuciones_globales"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textStyle="normal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/rif_text"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textStyle="normal" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="4"
                            android:paddingStart="33dp"
                            android:rowCount="2">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_marginTop="8dp"
                                android:text="@string/fecha"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="0"
                                android:layout_column="1"
                                android:layout_marginTop="8dp"
                                android:paddingStart="9dp"
                                android:text="@string/valueFecha"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="0"
                                android:layout_column="2"
                                android:layout_marginStart="9dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/hora_label"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="0"
                                android:layout_column="3"
                                android:layout_marginTop="8dp"
                                android:paddingStart="9dp"
                                android:text="@string/valueHora"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary" />


                        </GridLayout>

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="2"
                            android:paddingStart="33dp"
                            android:rowCount="4">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="4dp"
                                android:text="@string/Title_Vuelto"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="1"
                                android:layout_column="0"
                                android:text="@string/title_Cantidad"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="1"
                                android:layout_column="1"
                                android:paddingStart="5dp"
                                android:text="20" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="2"
                                android:layout_column="0"
                                android:text="@string/title_Monto"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="2"
                                android:layout_column="1"
                                android:paddingStart="5dp"
                                android:text="Bs 10.000.000" />
                        </GridLayout>


                        <!-- Buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="84dp"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </GridLayout>


        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floating_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="46dp"
            android:layout_marginStart="46dp"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/primary"
            app:iconGravity="end"
            android:layout_marginBottom="16dp"
            android:text="@string/title_ver_detaller"
            app:icon="@drawable/ic_checke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floating_details"
            android:layout_marginEnd="46dp"
            android:layout_marginStart="46dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconTint="@color/black"
            android:layout_marginBottom="70dp"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/my_app_secondary_variant_color"
            android:textColor="@color/black"

            android:text="@string/title_print"
            app:icon="@drawable/ic_checke_black"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>